--- a/src/style/_global.scss
+++ b/src/style/_global.scss
@@ -5,8 +5,8 @@
   
 $primaryColor: #eeffcc;
 $bgColor : #f5f5f5;
-$weakGreyColor: #aaa;
-$strongGreyColor: #888;
+$weakGreyColor: #bbb;
+$strongGreyColor: #777;
 
 body {
   margin: 0px auto;
