day2 SearchBar 롤링 애니메이션 마우스에 따라 정지/재개 구현

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -29,6 +29,8 @@ $SearchHeight: 60px;
                 padding-left: 20px;
                 line-height: $SearchHeight;
                 font-size: 1.2rem;
+                background-color: transparent;
+                z-index: 200;
             }
 
             .search__icon {
