feat: goodsStall 재활용하여 쇼핑 급상승 키워드 섹션 추가

--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -169,7 +169,7 @@
             @extend %text-block;
         }
 
-        .goods-item-list {
+        .goods-stall-list {
             display: flex;
             flex-wrap: wrap;
             .goods-stall__item {
