--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -19,6 +19,10 @@ $button-padding: 20px;
     border: 1px solid #e4e2e2;
 }
 
+%border-distinct {
+    border: 1px solid #979797;
+}
+
 %section-layout {
     width: 1270px;
     margin: auto;
