--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,6 +19,7 @@
 
     form {
       display: flex;
+      overflow: hidden;
 
       .search__input {
         width: 400px;
@@ -32,17 +33,23 @@
       }
     }
 
-    .search-top10 {
+    .search__box {
       position: absolute;
-      transform: translateY(50%);
-      left: 10px;
-      font-size: 1.2rem;
-      height: 50%;
       overflow: hidden;
-      .search-top10__item {
-        display: flex;
-        align-items: center;
-        padding: 6px;
+
+      .search-top10 {
+        padding: 5px;
+        font-size: 1.2rem;
+        height: 60px;
+
+        .search-top10__item {
+          display: flex;
+          align-items: center;
+          height: 60px;
+          color: #939393;
+          font-weight: 700;
+          line-height: 22px;
+        }
       }
     }
   }
