style. prettire & eslint 적용

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,6 @@
-@import "reset";
-@import "common";
-@import "header";
-@import "container";
-@import "footer";
-@import "slider";
+@import 'reset';
+@import 'common';
+@import 'header';
+@import 'container';
+@import 'footer';
+@import 'slider';
