fix a bug where the input window can not be pressed because it was blocked by RollingText

--- a/src/scss/rolling_text.module.scss
+++ b/src/scss/rolling_text.module.scss
@@ -9,6 +9,7 @@ $height: 40px;
   display: flex;
   align-items: center;
   overflow: hidden;
+  z-index: -1;
   
   .text-roller {
     height: $height;
