인기검색어컴포넌트 작성  * apiservice를 통해 검색어 리스트 조회   * 검색어리스트 자동롤(top값 변경) 이벤트 추가   * 검색창 마우스이벤트 추가

--- a/frontend/src/style/kakaoHead.scss
+++ b/frontend/src/style/kakaoHead.scss
@@ -71,18 +71,7 @@
         }
 
         .wrap_rollkeywords {
-            overflow: hidden;
-            position: absolute;
-            left: 31px;
-            top: 16px;
-            width: 578px;
-            height: 23px;
-            line-height: 22px;
-            background-color: #fff;
-            text-align: left;
-        }
-
-        .wrap_rollkeywords {
+            pointer-events: none;
             overflow: hidden;
             position: absolute;
             left: 31px;
