css 파일 불러오기 오류 수정

--- a/ethan.sglee/shoppingHow/views/index.html
+++ b/ethan.sglee/shoppingHow/views/index.html
@@ -5,9 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/libs/reset.css">
-  <link rel="stylesheet" href="./styles/_global.css">
-  <link rel="stylesheet" href="./styles/app.css">
+  <link rel="stylesheet" href="stylesheets/styles/reset.css">
+  <link rel="stylesheet" href="stylesheets/styles/app.css">
   <script src="https://kit.fontawesome.com/d69dc18532.js" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
@@ -25,7 +24,16 @@
           <button class="search__icon">🔍</button>
         </form>
         <ul class="search-top10">
-          <li class="search-top10__item">3. 아디다스 런닝화</li>
+          <li class="search-top10__item">1. 만보기</li>
+          <li class="search-top10__item">3. 낚시아이스박스</li>
+          <li class="search-top10__item">3. tv</li>
+          <li class="search-top10__item">4. 소형주택</li>
+          <li class="search-top10__item">5. 닭고기</li>
+          <li class="search-top10__item">6. 식물재배기</li>
+          <li class="search-top10__item">7. 양갈비</li>
+          <li class="search-top10__item">8. 욕실매트</li>
+          <li class="search-top10__item">9. 참기름</li>
+          <li class="search-top10__item">10. 육포</li>
         </ul>
       </div>
     </div>
