--- a/src/scss/ComponentStyles/InputWithTopRankingGoods.scss
+++ b/src/scss/ComponentStyles/InputWithTopRankingGoods.scss
@@ -1,4 +1,4 @@
-@use "search_bar_common.module" as search-bar;
+@use "ComponentStyles/search_bar_common.module" as search-bar;
 
 .component {
   display: flex;
