--- a/src/scss/ComponentStyles/InputWithTopRankingGoods.module.scss
+++ b/src/scss/ComponentStyles/InputWithTopRankingGoods.module.scss
@@ -1,4 +1,4 @@
-@use "search_bar_common.module" as search-bar;
+@use "../common/search_bar_common.module" as search-bar;
 
 .component {
   display: flex;
