--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -58,21 +58,18 @@
         .previous-top-item {
           transform: translateY(-60px);
           display: block;
-          // height: 60px;
         }
 
         .current-top-item {
           transform: translateY(0px);
           display: flex;
           align-items: center;
-          // height: 60px;
         }
 
         .next-top-item {
           transform: translateY(60px);
           display: flex;
           align-items: center;
-          // height: 60px;
         }
       }
     }
@@ -148,11 +145,78 @@
 
       .planning {
         width: 790px;
-
-        .planning__link {
-          display: block;
+        // display: flex;
+        position: relative;
+        .planning__lists__container {
+          overflow: hidden;
+          height: 340px;
+          width: 480px;
+          position: relative;
           margin: 0 auto;
-          width: 600px;
+          .planning__lists {
+            display: flex;
+            flex-direction: column;
+            align-items: start;
+            .planning__link {
+              position: absolute;
+              display: none;
+              margin: 0 auto;
+              width: 480px;
+              transition: transform 1s;
+            }
+            .prev-item {
+              transform: translateX(-480px);
+              display: block;
+            }
+            .cur-item {
+              transform: translateX(0);
+              display: block;
+            }
+            .next-item {
+              transform: translate(480px);
+              display: block;
+            }
+          }
+        }
+
+        .planning__btn {
+          position: absolute;
+          top: calc(50% - 54px);
+          width: 145px;
+          text-align: center;
+          font-size: 90px;
+          color: #f5f5f5;
+          cursor: pointer;
+          &:hover {
+            color: rgb(121, 113, 113);
+          }
+        }
+        .planning__right-btn {
+          right: 0;
+        }
+        .planning__pages {
+          position: absolute;
+          bottom: 30px;
+          left: 50%;
+          margin-left: 3px;
+          padding: 5px 0;
+          display: flex;
+          justify-content: center;
+          z-index: 10;
+
+          .planning__page {
+            display: block;
+            width: 20px;
+            height: 5px;
+            background-color: #ccc;
+            margin-right: 3px;
+            &:hover {
+              background-color: rgb(121, 113, 113);
+            }
+          }
+          .cur-page {
+            background-color: rgb(121, 113, 113);
+          }
         }
       }
     }
