--- a/ethan.sglee/shoppingHow/public/stylesheets/sass/_global.scss
+++ b/ethan.sglee/shoppingHow/public/stylesheets/sass/_global.scss
@@ -35,3 +35,11 @@ $button-padding: 20px;
   padding: 5px;
   font-size: 0.875rem;
 }
+
+.hidden {
+  display: hidden;
+}
+
+.none {
+  display: none;
+}
