--- a/ethan.sglee/shoppingHow/views/index.html
+++ b/ethan.sglee/shoppingHow/views/index.html
@@ -23,18 +23,20 @@
           <input type="text" class="search__input">
           <button class="search__icon">🔍</button>
         </form>
-        <ul class="search-top10">
-          <li class="search-top10__item">1. 만보기</li>
-          <li class="search-top10__item">3. 낚시아이스박스</li>
-          <li class="search-top10__item">3. tv</li>
-          <li class="search-top10__item">4. 소형주택</li>
-          <li class="search-top10__item">5. 닭고기</li>
-          <li class="search-top10__item">6. 식물재배기</li>
-          <li class="search-top10__item">7. 양갈비</li>
-          <li class="search-top10__item">8. 욕실매트</li>
-          <li class="search-top10__item">9. 참기름</li>
-          <li class="search-top10__item">10. 육포</li>
-        </ul>
+        <div class="search-rollbox">
+          <ul class="search-top10">
+            <li class="search-top10__item current">1. 만보기</li>
+            <li class="search-top10__item next">2. 낚시아이스박스</li>
+            <li class="search-top10__item">3. tv</li>
+            <li class="search-top10__item">4. 소형주택</li>
+            <li class="search-top10__item">5. 닭고기</li>
+            <li class="search-top10__item">6. 식물재배기</li>
+            <li class="search-top10__item">7. 양갈비</li>
+            <li class="search-top10__item">8. 욕실매트</li>
+            <li class="search-top10__item">9. 참기름</li>
+            <li class="search-top10__item prev">10. 육포</li>
+          </ul>
+        </div>
       </div>
     </div>
 
@@ -174,6 +176,7 @@
   </div>
   <footer></footer>
 
+  <script type="module" src="javascripts/index.js"></script>
   <script>
     function makeHotDealHTML() {
       const target = document.querySelector(".hot-deal-list");
