--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -13,10 +13,11 @@ h1 {
 
 $primaryColor: #eeffcc;
 $bgColor: #f5f5f5;
+$paleGray: #e4e2e2;
 
 $button-padding: 20px;
 %border-basic {
-    border: 1px solid #e4e2e2;
+    border: 1px solid $paleGray;
 }
 
 %border-distinct {
@@ -42,4 +43,19 @@ $button-padding: 20px;
 
 %text-bold {
     font-weight: bolder;
+}
+
+%x-center-align {
+    display: flex;
+    justify-content: center;
+}
+
+%y-center-align {
+    display: flex;
+    align-items: center;
+}
+
+%center-align {
+    @extend %x-center-align;
+    @extend %y-center-align;
 }
