--- a/src/styles/slider.scss
+++ b/src/styles/slider.scss
@@ -3,12 +3,38 @@
   align-items: center;
   justify-content: center;
 
+  &:hover {
+    .slider__prevBtn {
+      background-position: -60px 0;
+    }
+
+    .slider__nextBtn {
+      background-position: -90px 0;
+    }
+  }
+
   .slider__prevBtn,
   .slider__nextBtn {
+    overflow: hidden;
     cursor: pointer;
-    margin: 1rem;
-    padding: 1rem;
-    height: 50px;
+    margin: auto;
+    width: 23px;
+    height: 45px;
+    background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png) no-repeat;
+  }
+
+  .slider__prevBtn {
+    background-position: 0 0;
+    &:hover {
+      background-position: -120px 0;
+    }
+  }
+
+  .slider__nextBtn {
+    background-position: -30px 0;
+    &:hover {
+      background-position: -150px 0;
+    }
   }
 
   .slider__track {
@@ -37,13 +63,11 @@
           transition: background-color 100ms ease-out;
         }
 
+        .--selected,
         &:hover {
           span {
             background-color: black;
           }
-        }
-        .--selected {
-          background-color: black;
         }
       }
     }
