--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -85,6 +85,7 @@
         background-color: #fff;
         display: none;
         overflow: hidden;
+        z-index: 1;
     }
 
     .private-menu {
@@ -179,9 +180,7 @@
         margin-top: 60px;
 
         .section-title {
-            font-size: 1.25rem;
-            padding-bottom: 20px;
-            background-color: $bgColor;
+            @extend %h2-title;
         }
         .goods-stall__title,
         .goods-stall__detail-price {
@@ -191,6 +190,7 @@
         .goods-stall-list {
             display: flex;
             flex-wrap: wrap;
+            @extend %border-basic;
             .goods-stall__item {
                 width: 20%;
                 padding: 20px;
@@ -212,6 +212,15 @@
                 line-height: 1.1rem;
                 color: red;
             }
+        }
+    }
+
+    .suggestion {
+        @extend %section-layout;
+        margin-top: 60px;
+
+        .section-title {
+            @extend %h2-title;
         }
     }
 }
