Add: event slide carousel component

--- a/packages/web/src/sass/global.scss
+++ b/packages/web/src/sass/global.scss
@@ -60,12 +60,9 @@ $button-padding: 20px;
   background-color: #f9624c;
 }
 .slide {
-  position: relative;
-  top: 0px;
-  left: -514px;
-  transform: translate3d(0px, 0px, 0px);
-  width: 1542px;
   display: flex;
+  width: max-content;
+  cursor: pointer;
   .panel {
     height: 100%;
     overflow: hidden;
