top10 물품 롤링 코드 수정

--- a/ethan.sglee/shoppingHow/views/index.html
+++ b/ethan.sglee/shoppingHow/views/index.html
@@ -25,8 +25,8 @@
         </form>
         <div class="search-rollbox">
           <ul class="search-top10">
-            <li class="search-top10__item current">1. 만보기</li>
-            <li class="search-top10__item next">2. 낚시아이스박스</li>
+            <li class="search-top10__item">1. 만보기</li>
+            <li class="search-top10__item">2. 낚시아이스박스</li>
             <li class="search-top10__item">3. tv</li>
             <li class="search-top10__item">4. 소형주택</li>
             <li class="search-top10__item">5. 닭고기</li>
@@ -34,7 +34,8 @@
             <li class="search-top10__item">7. 양갈비</li>
             <li class="search-top10__item">8. 욕실매트</li>
             <li class="search-top10__item">9. 참기름</li>
-            <li class="search-top10__item prev">10. 육포</li>
+            <li class="search-top10__item">10. 육포</li>
+            <li class="search-top10__item">1. 만보기</li>
           </ul>
         </div>
       </div>
