배너작업(하단슬라이드제외) * 배너 데이터 수정 * 배너 데이터 송신 서버 수정(베스트 상품, 스페셜상품 합쳐서 주도록 수정) * 배너 슬라이드창 구성(이전, 다음 버튼 클릭 시 페이지 슬라이딩 , 페이징버튼 위에 마우스 올릴 시 페이지 변경) * 배너 css추가

--- a/frontend/src/style/app.scss
+++ b/frontend/src/style/app.scss
@@ -1,9 +1,8 @@
 @import "global";
 @import "kakaoHead";
-@import "shoppingPartner";
-@import "notice";
 @import "icon";
 @import "footer";
+@import "content";
 
 #daumWrap {
     position: relative;
