--- a/frontend/src/style/icon.scss
+++ b/frontend/src/style/icon.scss
@@ -35,3 +35,14 @@
     overflow: hidden;
     text-indent: -9999px;
 }
+
+.ico_slide {
+    display: inline-block;
+    overflow: hidden;
+    width: 15px;
+    height: 25px;
+    font-size: 0;
+    line-height: 0;
+    background: url(//shop1.daumcdn.net/search/cdn/simage/shopping/v2/common/img_home_150131.png) no-repeat;
+    text-indent: -9999px;
+}
