feat: header Menu CSS 수정 및 프로모션 테마 컴포넌트 코드 cleaning

--- a/src/public/sass/headerMenu.scss
+++ b/src/public/sass/headerMenu.scss
@@ -4,6 +4,9 @@
   border: 1px solid #cbcbcb;
   max-width: 1270px;
   margin: 40px auto;
+  padding-left: 30px;
+  padding-right: 30px;
+  box-sizing: border-box;
   .category {
     position: relative;
     .category__title {
