feat: suggestion 섹션에 캐로셀 컴포넌트 추가

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -59,3 +59,9 @@ $button-padding: 20px;
     @extend %x-center-align;
     @extend %y-center-align;
 }
+
+%h2-title {
+    font-size: 1.25rem;
+    padding-bottom: 20px;
+    background-color: $bgColor;
+}
