--- a/packages/web/src/sass/app.scss
+++ b/packages/web/src/sass/app.scss
@@ -33,13 +33,20 @@
   margin: 0 24px 0 30px;
   z-index: 10;
   .frm_shwsearch {
+    z-index: 3;
     position: relative;
     width: 670px;
     height: 54px;
     padding: 16px 60px 14px 30px;
     border: 1px solid #cecfd1;
     border-radius: 10px;
-    background-color: #fff;
+    background-color: transparent;
+    input {
+      float: left;
+      height: 22px;
+      width: 100%;
+      text-align: left;
+    }
     button {
       position: absolute;
       right: 0;
@@ -48,33 +55,36 @@
       height: 52px;
     }
   }
-}
-
-.wrap_rollkeywords {
-  overflow: hidden;
-  position: absolute;
-  left: 31px;
-  top: 16px;
-  width: 578px;
-  height: 23px;
-  line-height: 23px;
-  text-align: left;
-  ol {
+  .wrap_rollkeywords {
+    overflow: hidden;
     position: absolute;
-    left: 0;
-    width: 100%;
-    li {
-      overflow: hidden;
-      height: 22px;
-      font-weight: 700;
-      font-size: 20px;
-      line-height: 22px;
-      color: #939393;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      span {
-        margin-right: 15px;
-        font-family: robotoitalic, Apple SD Gothic Neo;
+    left: 31px;
+    top: 16px;
+    width: 578px;
+    height: 23px;
+    line-height: 23px;
+    text-align: left;
+    ol {
+      position: absolute;
+      top: -32px;
+      left: 0;
+      width: 100%;
+      li {
+        overflow: hidden;
+        height: 22px;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 22px;
+        color: #939393;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        span {
+          margin-right: 15px;
+          font-family: robotoitalic, Apple SD Gothic Neo;
+        }
+      }
+      :not(li:first-child) {
+        margin-top: 10px;
       }
     }
   }
@@ -118,6 +128,9 @@
       position: relative;
       .txt_new {
         right: 10px;
+      }
+      &:hover {
+        color: #f65b3d;
       }
     }
   }
@@ -248,6 +261,7 @@
   }
   .list_item {
     display: flex;
+    border-bottom: 1px solid #e4e4e4;
     li {
       padding: 21px 27px;
       width: 256px;
