--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -226,24 +226,75 @@ h1 {
 }
 .container .promotion .banner .best {
   float: left;
+  border-right: 1px solid #f1f1f1;
 }
 .container .promotion .banner .best .best__link {
   display: block;
   margin: 0 auto;
 }
-.container .promotion .banner .planning {
+.container .promotion .banner .carousel {
   flex-grow: 1;
+  position: relative;
 }
-.container .promotion .banner .planning .planning__link {
-  display: block;
+
+.container .promotion .banner .carousel .carousel-window {
   margin: 0 auto;
-  width: 600px;
+  max-width: 485px;
+  height: 340px;
+  position: relative;
+  overflow: hidden;
 }
-.container .promotion img {
-  margin: auto;
-  text-align: center;
+
+.carousel-window .carousel-container {
   display: flex;
+  position: absolute;
+  height: 100%;
 }
+
+.carousel-window .carousel-item {
+  width: 485px;
+}
+
+.carousel .carousel-controller {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+
+.carousel .carousel-controller .carousel__left-btn {
+  position: absolute;
+  height: 80px;
+  width: 60px;
+  top: calc(50% - 40px);
+  left: 40px;
+  text-align: center;
+  font-size: 80px;
+  font-weight: 100;
+  color: #999;
+}
+
+.carousel .carousel-controller .carousel__right-btn {
+  position: absolute;
+  height: 80px;
+  width: 60px;
+  top: calc(50% - 40px);
+  right: 40px;
+  text-align: center;
+  font-size: 80px;
+  font-weight: 100;
+  color: #999;
+}
+
+.carousel .carousel-controller .carousel__left-btn:hover {
+  color: #333;
+}
+
+.carousel .carousel-controller .carousel__right-btn:hover {
+  color: #333;
+}
+
 .container .theme .theme-container {
   display: flex;
 }
